# memory

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  agent_cli.py  dev.py  letta_docker.py  log_watch.py  main.py  memory_audit.py  runtime_limits.py  settings.py
app/agent/: __init__.py  context_builder.py  core_memory.py  core_memory_seed.py  core_memory_updater.py  letta_adapter.py  prompts.py  service.py  skills.py
app/approvals/: __init__.py  policy.py  queue.py
app/bot/: actions.py  intents.py  memory_jobs.py  telegram.py
app/memory/: __init__.py  audit.py  chat_importer.py  cognee_store.py  local_sources.py  obsidian_importer.py  palace.py  summary_importer.py
app/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
app/storage/: __init__.py  chat_events.py  chat_settings.py  db.py  ingest_runs.py  source_items.py
app/tools/: __init__.py  gws.py  gws_mcp.py  gws_mcp_auth.py  mcp_client.py  openclaw.py  processes.py
config/: approvals.yaml
docs/: press-release.md
tests/: test_agent_cli.py  test_agent_service.py  test_approval_queue.py  test_bot_actions.py  test_bot_intents.py  test_chat_events.py  test_chat_importer.py  test_chat_settings.py  test_cognee_store.py  test_context_builder.py  test_core_memory.py  test_gws_mcp.py  test_gws_tool.py  test_ingest_runs.py  test_ingest_status.py  test_letta_docker.py  test_local_sources.py  test_memory_audit.py  test_memory_jobs.py  test_obsidian_importer.py  test_openclaw_tool.py  test_palace.py  test_policy.py  test_process_tools.py  test_prompts.py  test_runtime_limits.py  test_skills.py  test_source_items.py  test_summary_importer.py  test_telegram_reply_context.py  test_telegram_typing.py
