[project]
name = "personal-memory-agent"
version = "0.1.0"
description = "Local-first Telegram personal agent with Cognee memory and gated tools."
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.5.0",
  "anthropic>=0.40.0",
  "cognee>=1.0.2",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
memory-agent = "app.main:main"
memory-agent-dev = "app.dev:main"
memory-agent-watch-errors = "app.log_watch:main"
memory-audit = "app.memory_audit:main"
obsidian-ingest = "app.memory.obsidian_importer:main"
chat-export-ingest = "app.memory.chat_importer:main"
local-memory-ingest = "app.memory.local_sources:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
